--- a/saleForBuilding.html
+++ b/saleForBuilding.html
@@ -54,11 +54,14 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				projectList: '_temp/project_list.html' //项目下来列表
-				// projectList: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetAllSellProject' //项目下来列表
+				// projectList: '_temp/project_list.html' //项目下来列表
+				projectList: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetAllSellProject' //项目下来列表
 
-				,buildingList: '_temp/building_list.html' //楼栋下来列表
-				,unitsList: '_temp/units_list.html' //户型数据
+				//,buildingList: '_temp/building_list.html' //楼栋下来列表
+				,buildingList: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetBuilding' //楼栋下来列表
+
+				//,unitsList: '_temp/units_list.html' //户型数据
+				,unitsList: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetBuildingSaleInfo' //户型数据
 			}
 
 			$(function() {
