--- a/yearReceive_area.html
+++ b/yearReceive_area.html
@@ -30,7 +30,7 @@
 				<li role="presentation" class="active"><a href="yearReceive_area.html">年度到款情况</a></li>
 			</ul>
 
-			<div>
+			<div class="">
 				<div id="buildingName" class="btn btn-primary btn-block active page-header">年度到款情况</div>
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
