--- a/yearSign_project.html
+++ b/yearSign_project.html
@@ -48,8 +48,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				yearSign_area_list: '_temp/yearSign_project_list.html' //项目下来列表
-				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/7.	WXSR_GetYearSignProject' //项目下来列表
+				//yearSign_area_list: '_temp/yearSign_project_list.html' //项目下来列表
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetYearSignProject' //项目下来列表
 			}
 
 			var TABLE_COLUMNS =[{
