--- a/saleForBuilding.html
+++ b/saleForBuilding.html
@@ -44,6 +44,11 @@
 					<thead></thead>
 					<tbody></tbody>
 				</table>
+				<table class="table table-bordered custom-table-footer" id="unitsListTableFooter">
+					<tbody>
+						<tr> <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
+					</tbody>
+				</table>
 			</div>
 
 		</div>
