custom table footer

--- a/saleForBuilding.html
+++ b/saleForBuilding.html
@@ -44,9 +44,8 @@
 					<thead></thead>
 					<tbody></tbody>
 				</table>
-				<table class="table table-bordered custom-table-footer" id="unitsListTableFooter">
+				<table class="table table-bordered custom-table-footer" id="customTableFooter">
 					<tbody>
-						<tr> <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 					</tbody>
 				</table>
 			</div>
