--- a/saleForBuilding.html
+++ b/saleForBuilding.html
@@ -39,15 +39,21 @@
 			</div>
 
 			<div class="table-wrapper">
-				<div id="buildingName" class="btn btn-primary btn-block active" style="margin-top:-5px; margin-bottom:5px;">&nbsp;</div>
-				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
-					<thead></thead>
-					<tbody></tbody>
-				</table>
-				<table class="table table-bordered custom-table-footer" id="customTableFooter">
-					<tbody>
-					</tbody>
-				</table>
+				<div id="tableContent" style="display: none;">
+					<div id="buildingName" class="btn btn-primary btn-block active" style="margin-top:-5px; margin-bottom:5px;">&nbsp;</div>
+					<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
+						<thead></thead>
+						<tbody></tbody>
+					</table>
+					<table class="table table-bordered custom-table-footer" id="customTableFooter">
+						<tbody>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			
+			<div class="bottom-back-btn">
+				<button id="historyBack" class="btn btn-primary btn-block">返回</button>
 			</div>
 
 		</div>
@@ -71,6 +77,9 @@
 			$(function() {
 				//设置项目下来列表
 				loadProjectList(URL_LIST.projectList);
+
+				//返回
+				historyGo('#historyBack');
 			});
 
 		</script>
