--- a/yearSign_project.html
+++ b/yearSign_project.html
@@ -24,13 +24,15 @@
 	</head>
 	<body>
 		<div class="container-fluid">
+			
+			<div class="fixd-tab-nav">
+				<ul class="nav nav-tabs nav-justified">
+					<li role="presentation" class="active"><a href="yearSign_area.html">年度签约情况</a></li>
+					<li role="presentation"><a href="yearReceive_area.html">年度到款情况</a></li>
+				</ul>
+			</div>
 
-			<ul class="nav nav-tabs nav-justified">
-				<li role="presentation" class="active"><a href="yearSign_area.html">年度签约情况</a></li>
-				<li role="presentation"><a href="yearReceive_area.html">年度到款情况</a></li>
-			</ul>
-
-			<div>
+			<div class="table-wrapper">
 				<div id="buildingName" class="btn btn-primary btn-block active page-header">年度签约情况</div>
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
@@ -38,7 +40,9 @@
 				</table>
 			</div>
 			
-			<button id="historyBack" class="btn btn-primary btn-block bottom-back-btn">返回</button>
+			<div class="bottom-back-btn">
+				<button id="historyBack" class="btn btn-primary btn-block">返回</button>
+			</div>
 
 		</div>
 	
