--- a/reportsForDay_receive.html
+++ b/reportsForDay_receive.html
@@ -75,7 +75,10 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list);
+				loadTableList(URL_LIST.yearSign_area_list);		
+						
+				//返回
+				historyGo('#historyBack');
 			});
 
 		</script>
