--- a/yearReceive_area.html
+++ b/yearReceive_area.html
@@ -52,7 +52,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				yearSign_area_list: '_temp/yearReceive_area_list.html' //项目下来列表
+				//yearSign_area_list: '_temp/yearReceive_area_list.html' //项目下来列表
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetYearRecAll' //项目下来列表
 
 				,gotoPageUrl : "yearReceive_project.html" // 点击跳转至项目列表
 			}
@@ -62,11 +63,11 @@
 			        title: '项目',
 			        halign: 'center'
 			    }, {
-			        field: 'yearSignBudget',
+			        field: 'yearRecBudget',
 			        title: '年度到款<br/>预算',
 			        halign: 'center'
 			    }, {
-			        field: 'yearSignDone',
+			        field: 'yearRecDone',
 			        title: '实际到款<br/>金额',
 			        halign: 'center'
 			    }, {
@@ -78,6 +79,9 @@
 			$(function() {
 				//设置项目下来列表
 				loadTableList(URL_LIST.yearSign_area_list);
+				
+				//返回
+				historyGo('#historyBack');
 			});
 
 		</script>
