--- a/yearReceive_project.html
+++ b/yearReceive_project.html
@@ -52,7 +52,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				yearSign_area_list: '_temp/yearReceive_project_list.html' //项目下来列表
+				//yearSign_area_list: '_temp/yearReceive_project_list.html' //项目下来列表
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetYearRecProject' //项目下来列表
 			}
 
 			var TABLE_COLUMNS =[{
@@ -75,7 +76,10 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list);
+				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().areaId});
+
+				//返回
+				historyGo('#historyBack');
 			});
 
 		</script>
