fix sale for building status
Signed-off-by: zsk-GitHub for Mac <zsk526@qq.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<b><i class="glyphicon glyphicon-tasks"></i></b><span>年度预算完成情况表</span></a>
 			</li>
 			<li>
-				<a href="#" ><b><i class="glyphicon glyphicon-signal"></i></b><span>项目统计表</span></a>
+				<a href="reportsForProject_purchaseSign.html" ><b><i class="glyphicon glyphicon-signal"></i></b><span>项目统计表</span></a>
 			</li>
 			<li>
 				<a href="reportsForDay_sign.html" ><b><i class="glyphicon glyphicon-time"></i></b><span>日报表</span></a>
