--- a/saleForBuilding.html
+++ b/saleForBuilding.html
@@ -53,7 +53,17 @@
 			</div>
 			
 			<div class="bottom-back-btn">
-				<button id="historyBack" class="btn btn-primary btn-block">返回</button>
+				<div class="btn-group btn-group-justified">
+				  <div class="btn-group" role="group">
+				    <button id="historyBack" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i> 后退</button>
+				  </div>
+				  <div class="btn-group" role="group">
+				    <button id="goToHome" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-home"></i> 首页</button>
+				  </div>
+				  <div class="btn-group" role="group">
+				    <button id="historyForward" type="button" class="btn btn-primary">前进 <i class="glyphicon glyphicon-chevron-right"></i></button>
+				  </div>
+				</div>
 			</div>
 
 		</div>
@@ -78,8 +88,8 @@
 				//设置项目下来列表
 				loadProjectList(URL_LIST.projectList);
 
-				//返回
-				historyGo('#historyBack');
+				//navigator bar 导航
+				initNavigatorBar();
 			});
 
 		</script>
