delete unuse files
Signed-off-by: zsk-GitHub for Mac <zsk526@qq.com>

--- a/reportsForDay_receive.html
+++ b/reportsForDay_receive.html
@@ -62,7 +62,9 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				yearSign_area_list: '_temp/reportsForDay_receive_list.html' //项目下来列表
+				//yearSign_area_list: '_temp/reportsForDay_receive_list.html' //项目下来列表
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetDaySignRecReport' //项目下来列表
+
 			}
 
 			var TABLE_COLUMNS =[{
