--- a/yearReceive_area.html
+++ b/yearReceive_area.html
@@ -66,6 +66,12 @@
 				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetYearRecAll' //项目下来列表
 
 				,gotoPageUrl : "yearReceive_project.html" // 点击跳转至项目列表
+
+				,gotoPageParam : {
+					source : 'row',
+					name : 'AreaId',
+					value : 'areaId'
+				}
 			}
 
 			var TABLE_COLUMNS =[{
