--- a/yearSign_area.html
+++ b/yearSign_area.html
@@ -69,6 +69,12 @@
 				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetYearSignAll' //项目下来列表
 
 				,gotoPageUrl : "yearSign_project.html" // 点击跳转至项目列表
+
+				,gotoPageParam : {
+					source : 'row',
+					name : 'AreaId',
+					value : 'areaId'
+				}
 			}
 
 			var TABLE_COLUMNS =[{
