--- a/yearSign_project.html
+++ b/yearSign_project.html
@@ -85,7 +85,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().areaId});
+				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().AreaId});
 
 				//navigator bar 导航
 				initNavigatorBar();
