--- a/reportsForMonth_saleType.html
+++ b/reportsForMonth_saleType.html
@@ -62,7 +62,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				yearSign_area_list: '_temp/reportsForMonth_saleType_list.html' //项目下来列表
+				// yearSign_area_list: '_temp/reportsForMonth_saleType_list.html' 
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetProjectProductTypeMonthReport'
 			}
 
 			var TABLE_COLUMNS =[{
@@ -89,7 +90,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list);								
+				loadTableList(URL_LIST.yearSign_area_list, {RptMonth : "201501", areaName : "厦门"});								
 				//navigator bar 导航
 				initNavigatorBar();
 			});
