--- a/reportsForProject_purchaseSign.html
+++ b/reportsForProject_purchaseSign.html
@@ -33,7 +33,7 @@
 				</ul>
 			</div>
 
-			<div class="table-wrapper" style="padding-top:50px;">
+			<div class="table-wrapper" style="padding-top:50px; font-size: 0.8em;">
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
 					<tbody></tbody>
@@ -62,7 +62,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				purchaseSign: '_temp/reportsForProject_purchaseSign_list.html' //项目下来列表
+				//tableList: '_temp/reportsForProject_purchaseSign_list.html'
+				tableList: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetProjectPurchaseSignAllReport'
 			}
 
 			var TABLE_COLUMNS =[{
@@ -89,7 +90,7 @@
 
 			$(function() {
 				//加载表格数据
-				loadTableList(URL_LIST.purchaseSign, {}, -105);
+				loadTableList(URL_LIST.tableList, {}, -105);
 				
 				//navigator bar 导航
 				initNavigatorBar();
