se table td align
when td elements value is number , set it’s align to right

--- a/reportsForDay_receive.html
+++ b/reportsForDay_receive.html
@@ -74,15 +74,18 @@
 			    }, {
 			        field: 'signNum',
 			        title: '日签约<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'receiveNum',
 			        title: '日到款<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'unReceiveNum',
 			        title: '未到款<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
