--- a/reportsForDay_sign.html
+++ b/reportsForDay_sign.html
@@ -74,19 +74,23 @@
 			    }, {
 			        field: 'house',
 			        title: '住宅<br/>(套)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'carport',
 			        title: '车位及<br/>储藏间(个)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'shop',
 			        title: '商铺<br/>(个)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'purchaseTotal',
 			        title: '认购金额<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
