--- a/reportsForMonth_month.html
+++ b/reportsForMonth_month.html
@@ -78,19 +78,23 @@
 			var TABLE_COLUMNS =[{
 			        field: 'month',
 			        title: '月份',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'center'
 			    }, {
 			        field: 'subscrib',
 			        title: '认购<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'sign',
 			        title: '签约<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'receive',
 			        title: '到款<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
