--- a/reportsForMonth_saleType.html
+++ b/reportsForMonth_saleType.html
@@ -69,23 +69,28 @@
 			var TABLE_COLUMNS =[{
 			        field: 'saleTypeName',
 			        title: '类型',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'center'
 			    }, {
 			        field: 'saleNum',
 			        title: '套数',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'subscrib',
 			        title: '认购<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'sign',
 			        title: '签约<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'receive',
 			        title: '到款<br/>(万元)',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
