--- a/reportsForProject_purchaseSign.html
+++ b/reportsForProject_purchaseSign.html
@@ -73,19 +73,23 @@
 			    }, {
 			        field: 'purchaseTotal',
 			        title: '<br/>已认购',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'signTotal',
 			        title: '<br/>已签约',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'receiveTotal',
 			        title: '<br/>已到款',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'unreceiveTotal',
 			        title: '<br/>未到款',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
