--- a/reportsForProject_soldArea.html
+++ b/reportsForProject_soldArea.html
@@ -72,19 +72,23 @@
 			    }, {
 			        field: 'saleTypeName',
 			        title: '<br/>业态',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'center'
 			    }, {
 			        field: 'totalArea',
 			        title: '总<br/>面积㎡',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'soldArea',
 			        title: '已售<br/>面积㎡',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'remainArea',
 			        title: '未售<br/>面积㎡',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
