--- a/reportsForProject_soldCount.html
+++ b/reportsForProject_soldCount.html
@@ -72,19 +72,23 @@
 			    }, {
 			        field: 'saleTypeName',
 			        title: '<br/>业态',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'center'
 			    }, {
 			        field: 'totalCount',
 			        title: '<br/>总数量',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'soldCount',
 			        title: '已售<br/>套数',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'remainCount',
 			        title: '未售<br/>套数',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
