--- a/yearReceive_area.html
+++ b/yearReceive_area.html
@@ -81,15 +81,18 @@
 			    }, {
 			        field: 'yearRecBudget',
 			        title: '年度到款<br/>预算',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'yearRecDone',
 			        title: '实际到款<br/>金额',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'completePercent',
 			        title: '预算完成<br/>比例',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
