--- a/yearSign_area.html
+++ b/yearSign_area.html
@@ -84,15 +84,18 @@
 			    }, {
 			        field: 'yearSignBudget',
 			        title: '年度签约<br/>预算',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'yearSignDone',
 			        title: '实际签约<br/>金额',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'completePercent',
 			        title: '预算完成<br/>比例',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
