--- a/yearReceive_project.html
+++ b/yearReceive_project.html
@@ -73,15 +73,18 @@
 			    }, {
 			        field: 'yearSignBudget',
 			        title: '年度到款<br/>预算',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'yearSignDone',
 			        title: '实际到款<br/>金额',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }, {
 			        field: 'completePercent',
 			        title: '预算完成<br/>比例',
-			        halign: 'center'
+			        halign: 'center',
+			        align: 'right'
 			    }];
 
 			$(function() {
