edit reports for month

--- a/reportsForMonth_saleType.html
+++ b/reportsForMonth_saleType.html
@@ -95,7 +95,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list, {RptMonth : "201501", areaName : "厦门"});								
+				loadTableList(URL_LIST.yearSign_area_list, {RptMonth : "201501", ProjectName : queryParamsToObj().ProjectName});								
 				//navigator bar 导航
 				initNavigatorBar();
 			});
