--- a/reportsForMonth_month.html
+++ b/reportsForMonth_month.html
@@ -99,7 +99,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list);
+				loadTableList(URL_LIST.yearSign_area_list, {RptDate : "2015-5-23"});
 								
 				//navigator bar 导航
 				initNavigatorBar();
