--- a/reportsForMonth_project.html
+++ b/reportsForMonth_project.html
@@ -63,9 +63,19 @@
 			// 请求的URL地址
 			var URL_LIST = {
 				// yearSign_area_list: '_temp/reportsForMonth_project_list.html'
-				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/'
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetProjectMonthReport'
 
 				,gotoPageUrl : "reportsForMonth_saleType.html" // 点击跳转至项目列表
+				,gotoPageParam : [
+					{
+						source : "row",
+						name : "ProjectName",
+						value : "projectName"
+					},{
+						name : "RptMonth",
+						value : queryParamsToObj().RptMonth
+					}
+				]
 			}
 
 			var TABLE_COLUMNS =[{
