add date select

--- a/reportsForMonth_month.html
+++ b/reportsForMonth_month.html
@@ -69,7 +69,7 @@
 				,gotoPageParam : [
 					{
 						source : "row",
-						name : "month",
+						name : "RptMonth",
 						value : "month"
 					}
 				]
@@ -99,7 +99,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list, {RptDate : "2015-5-23"});
+				loadTableList(URL_LIST.yearSign_area_list, {RptDate : "2015-05-24"});
 								
 				//navigator bar 导航
 				initNavigatorBar();
