--- a/yearReceive_project.html
+++ b/yearReceive_project.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 	<head>
 		<meta charset="UTF-8">
@@ -89,7 +89,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().AreaId});
+				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().AreaId, RptDate : queryParamsToObj().RptDate});
 
 				//navigator bar 导航
 				initNavigatorBar();
