--- a/yearSign_project.html
+++ b/yearSign_project.html
@@ -88,7 +88,7 @@
 
 			$(function() {
 				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().AreaId});
+				loadTableList(URL_LIST.yearSign_area_list, {AreaId : queryParamsToObj().AreaId, RptDate : queryParamsToObj().RptDate});
 
 				//navigator bar 导航
 				initNavigatorBar();
