--- a/reportsForDay_sign.html
+++ b/reportsForDay_sign.html
@@ -33,7 +33,11 @@
 			</div>
 
 			<div class="table-wrapper">
-				<div id="buildingName" class="btn btn-primary btn-block active page-header">日新增认购情况</div>
+
+				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header">日新增认购情况  &nbsp; <span id="rptDateText"></span> <span class="caret"></span></label>
+
+				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead style="font-size:0.8em;"></thead>
 					<tbody></tbody>
@@ -62,8 +66,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				//yearSign_area_list: '_temp/reportsForDay_sign_list.html' //项目下来列表
-				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetDayPurReport' //项目下来列表
+				//yearSign_area_list: '_temp/reportsForDay_sign_list.html'
+				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetDayPurReport' 
 
 			}
 
@@ -94,8 +98,11 @@
 			    }];
 
 			$(function() {
-				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list);
+				
+				$('#rptDate').val(CONSTANT.TODAY).on('change', function(){
+					$('#rptDateText').text(this.value);
+					loadTableList(URL_LIST.yearSign_area_list, {RptDate : this.value});
+				}).change();
 				
 				//navigator bar 导航
 				initNavigatorBar();
