--- a/yearReceive_area.html
+++ b/yearReceive_area.html
@@ -33,7 +33,11 @@
 			</div>
 
 			<div class="table-wrapper">
-				<div id="buildingName" class="btn btn-primary btn-block active page-header">年度到款情况</div>
+
+				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header">年度到款情况  &nbsp; <span id="rptDateText"></span> <span class="caret"></span></label>
+
+				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
 					<tbody></tbody>
@@ -67,11 +71,14 @@
 
 				,gotoPageUrl : "yearReceive_project.html" // 点击跳转至项目列表
 
-				,gotoPageParam : {
+				,gotoPageParam : [{
 					source : 'row',
 					name : 'AreaId',
 					value : 'areaId'
-				}
+				},{
+					name : 'RptDate',
+					value : CONSTANT.TODAY
+				}]
 			}
 
 			var TABLE_COLUMNS =[{
@@ -96,8 +103,10 @@
 			    }];
 
 			$(function() {
-				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list);
+				$('#rptDate').val(CONSTANT.TODAY).on('change', function(){
+					$('#rptDateText').text(this.value);
+					loadTableList(URL_LIST.yearSign_area_list, {RptDate : this.value});
+				}).change();
 				
 				//navigator bar 导航
 				initNavigatorBar();
