--- a/reportsForMonth_month.html
+++ b/reportsForMonth_month.html
@@ -33,7 +33,11 @@
 			</div>
 
 			<div class="table-wrapper">
-				<div id="buildingName" class="btn btn-primary btn-block active page-header">全年月报表</div>
+				
+				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span>年各月报表&nbsp;<span class="caret"></span></label>
+
+				<select class="hide-date-input" name="rptDate" id="rptDate"></select>
+
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead style="font-size:0.8em;"></thead>
 					<tbody></tbody>
@@ -71,6 +75,9 @@
 						source : "row",
 						name : "RptMonth",
 						value : "month"
+					},{
+						name : "RptYear",
+						value : null //后期给
 					}
 				]
 			}
@@ -98,12 +105,30 @@
 			    }];
 
 			$(function() {
-				//设置项目下来列表
-				loadTableList(URL_LIST.yearSign_area_list, {RptDate : "2015-05-24"});
+
+				var minYear = 2012;
+				var maxYear = (new Date()).getFullYear();
+				initYearSelect(minYear, maxYear); // 设置年份选择下拉
+
+				$('#rptDate').val(maxYear).on('change', function(){
+					$('#rptDateText').text(this.value);
+					loadTableList(URL_LIST.yearSign_area_list, {RptYear : this.value});
+
+					URL_LIST.gotoPageParam[1].value = this.value;
+				}).change();
 								
 				//navigator bar 导航
 				initNavigatorBar();
 			});
+
+			// 设置年份选择下拉
+			function initYearSelect (minYear, maxYear) {
+				var datas = [];
+				for(var i = minYear, j = maxYear; i <= j; i++){
+					datas.push({id : i, name : i + '年'});
+				}
+				setSelect('rptDate', datas)
+			}
 
 		</script>
 		
