--- a/reportsForMonth_project.html
+++ b/reportsForMonth_project.html
@@ -77,7 +77,7 @@
 						value : "projectName"
 					},{
 						name : "RptMonth",
-						value : queryParamsToObj().RptMonth
+						value : null
 					}
 				]
 			}
@@ -105,9 +105,18 @@
 
 			$(function() {
 				
+				var year = (new Date()).getFullYear();
+				var month = queryParamsToObj().RptMonth;
+				if(month.length < 2){month = '0' + month}
+
 				$('#rptDate').val(year + '-' + month).on('change', function(){
 					$('#rptDateText').text(this.value);
-					loadTableList(URL_LIST.yearSign_area_list, {RptMonth : queryParamsToObj().RptMonth, AreaId : queryParamsToObj().AreaId});
+					loadTableList(URL_LIST.yearSign_area_list, {
+						RptMonth : (this.value).replace('-',''), 
+						AreaId : queryParamsToObj().AreaId
+					});
+
+					URL_LIST.gotoPageParam[1].value = this.value;
 				}).change();
 								
 				//navigator bar 导航
