--- a/reportsForMonth_month.html
+++ b/reportsForMonth_month.html
@@ -67,7 +67,7 @@
 			// 请求的URL地址
 			var URL_LIST = {
 				// yearSign_area_list: '_temp/reportsForMonth_month_list.html' //项目下来列表
-				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetAllMonthReport'
+				yearSign_area_list: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetAllMonthReport'
 
 				,gotoPageUrl : "reportsForMonth_area.html" // 点击跳转至项目列表
 				,gotoPageParam : [
