--- a/reportsForMonth_saleType.html
+++ b/reportsForMonth_saleType.html
@@ -67,7 +67,7 @@
 			// 请求的URL地址
 			var URL_LIST = {
 				// yearSign_area_list: '_temp/reportsForMonth_saleType_list.html' 
-				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetProjectProductTypeMonthReport'
+				yearSign_area_list: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetProjectProductTypeMonthReport'
 			}
 
 			var TABLE_COLUMNS =[{
