--- a/reportsForMonth_area.html
+++ b/reportsForMonth_area.html
@@ -95,7 +95,7 @@
 			// 请求的URL地址
 			var URL_LIST = {
 				// yearSign_area_list: '_temp/reportsForMonth_area_list.html'
-				yearSign_area_list: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetAreaMonthReport'
+				yearSign_area_list: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetAreaMonthReport'
 
 				,gotoPageUrl : "reportsForMonth_project.html" // 点击跳转至项目列表
 
