--- a/reportsForProject_soldArea.html
+++ b/reportsForProject_soldArea.html
@@ -63,7 +63,7 @@
 			// 请求的URL地址
 			var URL_LIST = {
 				// tableList: '_temp/reportsForProject_soldArea_list.html'
-				tableList: 'http://27.154.54.186:9000/VipService.asmx/WXSR_GetRoomSaleAndRemainArea'
+				tableList: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetRoomSaleAndRemainArea'
 			}
 
 			var TABLE_COLUMNS =[
